cdx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cdx
  template:
    metadata:
      labels:
        app: cdx
    spec:
      containers:
      - name: cdx
        image: axidex/api1 # cyclonedx/cyclonedx-gomod
        resources:
          requests:
            cpu: "500m"
            memory: "300Mi"
          limits:
            cpu: "1000m"      # Ограничение на использование CPU
            memory: "2000Mi"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cdx-service
spec:
  selector:
    app: cdx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
